@@ -787,6 +787,19 @@ upstream backserver {
 
 #### JVM参数调优?
 
+###### 堆设置
+* -Xms: 初始堆大小。
+* -Xmx: 最大堆大小。
+* -XX:NewSize=n: 设置年轻代大小。
+* -XX:NewRatio=n: 设置年轻代和年老代的比值。如:为3，表示年轻代与年老代比值为1:3，年轻代占整个年轻代年老代和的1/4。
+* -XX:SurvivorRatio=n: 年轻代中Eden区与两个Survivor区的比值。注意Survivor区有两个。如:3，表示Eden:Survivor=3:2，一个Survivor区占整个年轻代的1/5 。
+* -XX:MaxPermSize=n: 设置持久代大小。
+
+###### 收集器设置
+* -XX:+UseSerialGC: 设置串行收集器。
+* -XX:+UseParallelGC: 设置并行收集器。
+* -XX:+UseParalledlOldGC: 设置并行年老代收集器。
+* -XX:+UseConcMarkSweepGC: 设置并发收集器。
 
 
 #### JVM常用命令?
